# DRF_course_platform

./: db.sqlite3  docker-compose.yml  pyproject.toml  requirements.txt
config/: celery.py  settings.py  urls.py
course/: admin.py  models.py  paginators.py  permissions.py  serliazers.py  services.py  tasks.py  tests.py  urls.py  validators.py  views.py
course/migrations/: 0001_initial.py
lessons/: admin.py  models.py  serliazers.py  views.py
lessons/migrations/: 0001_initial.py  0002_lesson_courses.py  0003_remove_lesson_courses.py  0004_lesson_course.py  0005_remove_lesson_url.py  0006_lesson_url.py
payment/: models.py  views.py
payment/migrations/: 0001_initial.py  0002_payment_lesson.py  0003_remove_payment_user_alter_payment_date_payment.py  0004_payment_user.py  0005_alter_payment_user.py
users/: models.py  tasks.py  urls.py
users/management/commands/: csu.py
users/migrations/: 0001_initial.py
