[tool.poetry]
name = "drf-course-platform"
version = "0.1.0"
description = ""
authors = ["denanmax <deshis93@gmail.com>"]
readme = "README.md"
packages = [{include = "drf_course_platform"}]

[tool.poetry.dependencies]
python = "^3.11"
django-filter = "^23.3"
coverage = "^7.3.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
