[tool.poetry]
name = "drf-course-platform"
version = "0.1.0"
description = ""
authors = ["denanmax <deshis93@gmail.com>"]
readme = "README.md"
packages = [{include = "drf_course_platform"}]

[tool.poetry.dependencies]
python = "^3.11"
django-filter = "^23.3"
coverage = "^7.3.2"
drf-yasg = "^1.21.7"
requests = "^2.31.0"
stripe = "^6.7.0"
celery = "^5.3.4"
redis = "^5.0.1"
django-celery-beat = "^2.5.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
